--- a/app/src/main/res/layout/activity_home_main_options.xml
+++ b/app/src/main/res/layout/activity_home_main_options.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/text_view_game_options"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
@@ -20,99 +20,90 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="HardcodedText" />
 
-        <androidx.gridlayout.widget.GridLayout
+        <LinearLayout
+            android:id="@+id/main_options_first_row"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:columnCount="3"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:baselineAligned="false"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView7"
-            app:layout_constraintVertical_bias="1.0"
-            app:rowCount="2">
+            app:layout_constraintTop_toBottomOf="@+id/text_view_game_options">
 
             <include
                 android:id="@+id/hazari"
                 layout="@layout/activity_home_single_menu_layout"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                app:layout_column="0"
-                app:layout_columnWeight="1"
-                app:layout_gravity="fill"
-                app:layout_row="0"
-                app:layout_rowWeight="1" />
+                android:layout_weight="1" />
 
             <include
                 android:id="@+id/hearts"
                 layout="@layout/activity_home_single_menu_layout"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                app:layout_column="1"
-                app:layout_columnWeight="1"
-                app:layout_gravity="fill"
-                app:layout_row="0"
-                app:layout_rowWeight="1" />
+                android:layout_weight="1" />
 
             <include
                 android:id="@+id/nine_card"
                 layout="@layout/activity_home_single_menu_layout"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginBottom="8dp"
-                app:layout_column="2"
-                app:layout_columnWeight="1"
-                app:layout_gravity="fill"
-                app:layout_row="0"
-                app:layout_rowWeight="1" />
+                android:layout_marginEnd="8dp"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/main_option_second_row"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
+            android:baselineAligned="false"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/main_options_first_row">
 
             <include
                 android:id="@+id/twenty_nine"
                 layout="@layout/activity_home_single_menu_layout"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                app:layout_column="0"
-                app:layout_columnWeight="1"
-                app:layout_gravity="fill"
-                app:layout_row="1"
-                app:layout_rowWeight="1" />
+                android:layout_weight="1" />
 
             <include
                 android:id="@+id/spades"
                 layout="@layout/activity_home_single_menu_layout"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                app:layout_column="1"
-                app:layout_columnWeight="1"
-                app:layout_gravity="fill"
-                app:layout_row="1"
-                app:layout_rowWeight="1" />
+                android:layout_weight="1" />
 
             <include
                 android:id="@+id/bici_kata"
                 layout="@layout/activity_home_single_menu_layout"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_column="2"
-                app:layout_columnWeight="1"
-                app:layout_gravity="fill"
-                app:layout_row="1"
-                app:layout_rowWeight="1" />
+                android:layout_marginEnd="8dp"
+                android:layout_weight="1" />
 
-        </androidx.gridlayout.widget.GridLayout>
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
