--- a/app/src/main/res/layout/activity_home_main_options.xml
+++ b/app/src/main/res/layout/activity_home_main_options.xml
@@ -32,32 +32,35 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_view_game_options">
 
-            <include
+            <com.ashtray.card.game.manager.common.ui.custom.VerticalMenuItem
                 android:id="@+id/hazari"
-                layout="@layout/activity_home_single_menu_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                app:vmi_image="@drawable/test2"
+                app:vmi_text="Hazari" />
 
-            <include
+            <com.ashtray.card.game.manager.common.ui.custom.VerticalMenuItem
                 android:id="@+id/hearts"
-                layout="@layout/activity_home_single_menu_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                app:vmi_image="@drawable/test2"
+                app:vmi_text="Hearts" />
 
-            <include
+            <com.ashtray.card.game.manager.common.ui.custom.VerticalMenuItem
                 android:id="@+id/nine_card"
-                layout="@layout/activity_home_single_menu_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                app:vmi_image="@drawable/test2"
+                app:vmi_text="9 Card" />
 
         </LinearLayout>
 
@@ -76,32 +79,35 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/main_options_first_row">
 
-            <include
+            <com.ashtray.card.game.manager.common.ui.custom.VerticalMenuItem
                 android:id="@+id/twenty_nine"
-                layout="@layout/activity_home_single_menu_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                app:vmi_image="@drawable/test2"
+                app:vmi_text="29" />
 
-            <include
+            <com.ashtray.card.game.manager.common.ui.custom.VerticalMenuItem
                 android:id="@+id/spades"
-                layout="@layout/activity_home_single_menu_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                app:vmi_image="@drawable/test2"
+                app:vmi_text="Spades" />
 
-            <include
+            <com.ashtray.card.game.manager.common.ui.custom.VerticalMenuItem
                 android:id="@+id/bici_kata"
-                layout="@layout/activity_home_single_menu_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                app:vmi_image="@drawable/test2"
+                app:vmi_text="Bici kata" />
 
         </LinearLayout>
 
