--- a/app/src/main/res/layout/fragment_add_hazari_game.xml
+++ b/app/src/main/res/layout/fragment_add_hazari_game.xml
@@ -13,7 +13,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/fragment_background_color">
+        android:background="@color/fragment_background_color"
+        android:clickable="true"
+        android:focusable="true">
 
         <TextView
             android:id="@+id/textView6"
