--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
 
-    <color name="fragment_background_color">#FFFFFF</color>
+    <color name="colorPrimary">@color/fragment_background1</color>
+    <color name="colorPrimaryDark">@color/fragment_background1</color>
+    <color name="colorAccent">@color/anti_fragment_background1</color>
+
+    <bool name="status_bar_text_color">true</bool>
+
+    <color name="fragment_background1">#FFFFFF</color>
+    <color name="fragment_background2">#FFFFFF</color>
+    <color name="fragment_background3">#FFFFFF</color>
+    <color name="fragment_background4">#FFFFFF</color>
+
+    <color name="anti_fragment_background1">#000000</color>
+    <color name="anti_fragment_background2">#000000</color>
+    <color name="anti_fragment_background3">#000000</color>
+    <color name="anti_fragment_background4">#000000</color>
+
+    <color name="error_color_deep">#F47174</color>
+    <color name="error_color_light">#F47174</color>
+
 </resources>
