adding some color variation so that we can understand the change

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,14 +8,14 @@
     <bool name="status_bar_text_color">true</bool>
 
     <color name="fragment_background1">#FFFFFF</color>
-    <color name="fragment_background2">#FFFFFF</color>
-    <color name="fragment_background3">#FFFFFF</color>
-    <color name="fragment_background4">#FFFFFF</color>
+    <color name="fragment_background2">#DEDEDE</color>
+    <color name="fragment_background3">#CCCCCC</color>
+    <color name="fragment_background4">#AAAAAA</color>
 
     <color name="anti_fragment_background1">#000000</color>
-    <color name="anti_fragment_background2">#000000</color>
-    <color name="anti_fragment_background3">#000000</color>
-    <color name="anti_fragment_background4">#000000</color>
+    <color name="anti_fragment_background2">#151515</color>
+    <color name="anti_fragment_background3">#353535</color>
+    <color name="anti_fragment_background4">#454545</color>
 
     <color name="error_color_deep">#F47174</color>
     <color name="error_color_light">#F47174</color>
