--- a/app/src/main/res/drawable/bg_home_status_layout.xml
+++ b/app/src/main/res/drawable/bg_home_status_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#555555" />
+    <solid android:color="@color/fragment_background2" />
     <corners android:radius="16dp" />
 </shape>
