--- a/app/src/main/res/layout/fragment_home_status_layout.xml
+++ b/app/src/main/res/layout/fragment_home_status_layout.xml
@@ -61,28 +61,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view">
 
-            <TextView
-                android:id="@+id/textView4"
+            <com.ashtray.card.game.manager.common.ui.custom.SingleButtonItem
+                android:id="@+id/tv_like_us"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:text="TextView"
-                android:textColor="#000000"
-                android:textSize="20sp"
-                android:textStyle="bold"
+                app:sbi_text="Like US"
                 tools:ignore="HardcodedText" />
 
-            <TextView
-                android:id="@+id/textView5"
+            <com.ashtray.card.game.manager.common.ui.custom.SingleButtonItem
+                android:id="@+id/tv_contact_us"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:text="TextView"
-                android:textColor="#000000"
-                android:textSize="20sp"
-                android:textStyle="bold"
+                app:sbi_text="Contact us"
                 tools:ignore="HardcodedText" />
 
         </LinearLayout>
