--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -13,6 +13,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/fragment_background1"
         android:clickable="true"
         android:focusable="true">
 
@@ -28,14 +29,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/action_bar"
-            android:background="@color/fragment_background1"
             tools:ignore="UselessParent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                tools:context=".features.home.HomeScreenFragment">
+                android:orientation="vertical">
 
                 <include
                     android:id="@+id/status_view"
