--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,7 +4,7 @@
         <attr name="vmi_text" format="string" />
         <attr name="vmi_image" format="reference" />
     </declare-styleable>
-    <declare-styleable name="SingleButtonItem">
+    <declare-styleable name="FilledSingleButton">
         <attr name="sbi_text" format="string" />
     </declare-styleable>
     <declare-styleable name="BaseActionBar">
