--- a/app/src/main/res/layout/fragment_add_hazari_game.xml
+++ b/app/src/main/res/layout/fragment_add_hazari_game.xml
@@ -10,24 +10,38 @@
             type="com.ashtray.card.game.manager.features.hazari.AddHazariGameViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/fragment_background1"
         android:clickable="true"
         android:focusable="true">
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
+        <com.ashtray.card.game.manager.common.ui.base.BaseActionBar
+            android:id="@+id/action_bar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:padding="10dp"
-            android:text="TextView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="HardcodedText" />
+            app:actionbar_back_btn_visibility="false"
+            app:actionbar_menu_item_visibility="false"
+            app:actionbar_title="Add Hazari game" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/action_bar">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+
+
+            </LinearLayout>
+
+        </ScrollView>
+
+    </RelativeLayout>
+
 </layout>
