--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,7 +24,7 @@
 
     <color name="button_background">#7972E6</color>
     <color name="button_background_ripple">#6060D0</color>
-    <color name="button_text_color">#F7FAFA</color>
+    <color name="button_text_color">#000000</color>
 
     <color name="error_color_deep">#F47174</color>
     <color name="error_color_light">#F47174</color>
