--- a/app/src/main/res/layout/fragment_add_hazari_game.xml
+++ b/app/src/main/res/layout/fragment_add_hazari_game.xml
@@ -35,6 +35,7 @@
                 android:orientation="vertical">
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
+                    android:id="@+id/game_name_input_field"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
@@ -42,6 +43,7 @@
                     app:bif_title="Game name ?" />
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
+                    android:id="@+id/target_score_input_field"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
@@ -50,43 +52,55 @@
                     app:bif_title="Target score ?" />
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
+                    android:id="@+id/player_name_input_field1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
                     app:bif_hint="Enter player name 1"
-                    app:bif_title="Player name 1 ?" />
+                    app:bif_title="Player name ?"
+                    app:bif_title_visibility="true" />
 
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
                     app:bif_hint="Enter player name 2"
-                    app:bif_title="Player name 2 ?" />
+                    app:bif_title_visibility="false" />
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
                     app:bif_hint="Enter player name 3"
-                    app:bif_title="Player name 3 ?" />
+                    app:bif_title_visibility="false" />
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
                     app:bif_hint="Enter player name 4"
-                    app:bif_title="Player name 4 ?" />
+                    app:bif_title_visibility="false" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1.5dp"
-                    android:layout_margin="16dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="24dp"
+                    android:layout_marginBottom="16dp"
                     android:background="@color/fragment_background3" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
                     android:orientation="horizontal"
                     android:padding="16dp">
 
