--- a/app/src/main/res/drawable/bg_stroked_single_button.xml
+++ b/app/src/main/res/drawable/bg_stroked_single_button.xml
@@ -3,6 +3,7 @@
     android:color="@color/button_background_ripple">
     <item>
         <shape android:shape="rectangle">
+            <solid android:color="@color/fragment_background2" />
             <stroke
                 android:width="2dp"
                 android:color="@color/button_background" />
